[package]
edition = "2021"
name = "rust-linux-safe-demo"
version = "0.1.0"

[dependencies]
linux-io = {path = "../linux-io", default-features = false}
linux-unsafe = {path = "../linux-unsafe"}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.release]
release = false
