[package]
name = "linux-io"
version = "0.1.0"
edition = "2021"
description = "Lightweight abstractions around Linux system calls related to file descriptors."
license = "MIT"
repository = "https://github.com/apparentlymart/rust-linux-safe"

[dependencies]
linux-unsafe = "0.3.0"

[dev-dependencies]
tempfile = "3.3.0"

[features]
default = ["std"]
std = []
