[package]
description = "Lightweight abstractions around Linux system calls related to file descriptors."
name = "linux-io"
version = "0.9.1"

edition = "2021"
license = "MIT"
repository = "https://github.com/apparentlymart/rust-linux"

[dependencies]
linux-unsafe = {path = "../linux-unsafe", version = "0.11.0" }

[dev-dependencies]
tempfile = "3.3.0"

[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
