[package]
description = "Safe API to the Linux KVM API."
name = "linux-kvm"
version = "0.4.1"

edition = "2021"
license = "MIT"
repository = "https://github.com/apparentlymart/rust-linux"

[dependencies]
linux-io = {path = "../linux-io", version = "0.9.1" }
linux-unsafe = {path = "../linux-unsafe", version = "0.11.0" }
