[package]
name = "linux-unsafe"
version = "0.5.0"
edition = "2021"
description = "Raw linux system call stubs."
license = "MIT"
repository = "https://github.com/apparentlymart/rust-linux"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "i686-unknown-linux-gnu", "armv7-unknown-linux-gnueabihf", "riscv64gc-unknown-linux-gnu"]
